<resources>
    <string name="app_name">Square Off</string>
    <string name="custom_string">Hello, Welcome to Square Off!!</string>
    <string name="your">Your</string>
    <string name="play">Play</string>
    <string name="_0">0</string>
    <string name="boxes">BOXES</string>
    <string name="winner_is_you">Winner is You</string>
    <string name="undo">Undo</string>
    <string name="home">Home</string>

    <string name="rules_and_information">Rules And Information</string>
    <string name="game_intro">Square Off (also known as Dots and Boxes, Squares, Paddocks, Pigs in a Pen, Square-it, Dots and Dashes, Dots, Smart Dots, Dot Boxing, simply, the Dot Game) is a pencil and paper game for two players (or sometimes, more than two) first published in 1889 by Edouard Lucas.</string>
    <string name="game_intro1">Starting with an empty grid of dots, players take turns, adding a single horizontal or vertical line between two unjoined adjacent dots.</string>
    <string name="game_intro3">A player who completes the fourth side of a 1 x1 box earns one point and takes another turn. (The points are typically recorded by placing in the box an identifying mark of the player, such as an initial). The game ends when no more lines can be placed. The winner of the game is the player with the most points. The board may be of any size, but we only have 3x3, 4x4, and 6x6.</string>
    <string name="square_off">Square Off !!</string>
    <string name="todo">TODO</string>

</resources>
