<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/win_background1"
    android:orientation="vertical"
    tools:context="com.mrspd.squareoff.Ui.GameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="#061023"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/ic_undo_black_24dp"
                android:fontFamily="@font/font"
                android:onClick="Undo"
                android:text="@string/undo"
                android:textColor="#EF1807"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/igPlayerProfile"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginTop="24dp" />

        <ImageView
                android:id="@+id/igPlayerProfile"
                android:layout_width="131dp"
                android:layout_height="139dp"
                android:src="@drawable/team5"
                android:contentDescription="TODO"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" />

        <TextView
                android:id="@+id/tvName"
                android:layout_width="82dp"
                android:layout_height="33dp"
                android:fontFamily="@font/font"
                android:text="@string/your"
                android:textColor="#fff"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@+id/occupiedBoxes"
                app:layout_constraintStart_toStartOf="@+id/occupiedBoxes"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.476" />

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:fontFamily="@font/font"
                android:text="@string/play"
                android:textColor="#7AE37F"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="@+id/igPlayerProfile"
                app:layout_constraintEnd_toStartOf="@+id/igPlayerProfile"
                app:layout_constraintTop_toTopOf="@+id/igPlayerProfile"
                app:layout_constraintVertical_bias="0.172" />

        <TextView
                android:id="@+id/occupiedBoxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/font"
                android:text="@string/_0"
                android:textColor="#FFC107"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/font"
            android:text="@string/boxes"
            android:textColor="#00BCD4"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:foregroundGravity="center"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.mrspd.squareoff.Ui.Game
                android:id="@+id/gameView"
                android:layout_width="390dp"
                android:layout_height="469dp"
                android:layout_margin="15dp"
                android:foregroundGravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.761"
                app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>